@@ -2866,3 +2866,54 @@ int CUtil::GetMatchingShare(const CStdString& strPath, VECSHARES& vecShares, boo
   }
   return -1;
 }
+
+CStdString CUtil::TranslateSpecialDir(const CStdString &strSpecial)
+{
+  CStdString strReturn;
+  if (strSpecial[0] == '$')
+  {
+    if (strSpecial.Equals("$HOME"))
+      strReturn = "Q:\\";
+    if (strSpecial.Equals("$SUBTITLES"))
+      strReturn = g_stSettings.m_szAlternateSubtitleDirectory;
+    if (strSpecial.Equals("$THUMBNAILS"))
+      strReturn = g_stSettings.szThumbnailsDirectory;
+    if (strSpecial.Equals("$SHORTCUTS"))
+      strReturn = g_stSettings.m_szShortcutDirectory;
+    if (strSpecial.Equals("$ALBUMS"))
+      strReturn = g_stSettings.m_szAlbumDirectory;
+    if (strSpecial.Equals("$RECORDINGS"))
+      strReturn = g_stSettings.m_szMusicRecordingDirectory;
+    if (strSpecial.Equals("$SCREENSHOTS"))
+      strReturn = g_stSettings.m_szScreenshotsDirectory;
+    if (strSpecial.Equals("$PLAYLISTS"))
+      strReturn = (CStdString)g_stSettings.m_szAlbumDirectory + "\\playlists";
+  }
+  if (strReturn.IsEmpty())
+    CLog::Log(LOGERROR,"Invalid special directory token: %s",strSpecial.c_str());
+  return strReturn;
+}
+      
+void CUtil::TranslateBookmarks(VECSHARES& vecShares)
+{
+
+  // replace the special dirs
+  VECSHARES vecTemp;
+  for (int i = 0; i < (int)vecShares.size(); ++i)
+  {
+    CShare share = vecShares.at(i);
+    if (share.strPath.at(0) == '$')
+    {
+      share.strPath = TranslateSpecialDir(share.strPath);
+      if (!share.strPath.IsEmpty())
+        vecTemp.push_back(share);
+      else
+        CLog::Log(LOGERROR,"Removing invalid special directory token from bookmarks");
+    }
+    else
+      vecTemp.push_back(share);
+  }
+
+  vecShares.empty();
+  vecShares = vecTemp;
+}
